seaqt/QtNetwork/gen_qnetworksession.nim

import ./Qt5Network_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt5Network")  & " -fPIC"
{.compile("gen_qnetworksession.cpp", cflags).}


type QNetworkSessionStateEnum* = distinct cint
template Invalid*(_: type QNetworkSessionStateEnum): untyped = 0
template NotAvailable*(_: type QNetworkSessionStateEnum): untyped = 1
template Connecting*(_: type QNetworkSessionStateEnum): untyped = 2
template Connected*(_: type QNetworkSessionStateEnum): untyped = 3
template Closing*(_: type QNetworkSessionStateEnum): untyped = 4
template Disconnected*(_: type QNetworkSessionStateEnum): untyped = 5
template Roaming*(_: type QNetworkSessionStateEnum): untyped = 6


type QNetworkSessionSessionErrorEnum* = distinct cint
template UnknownSessionError*(_: type QNetworkSessionSessionErrorEnum): untyped = 0
template SessionAbortedError*(_: type QNetworkSessionSessionErrorEnum): untyped = 1
template RoamingError*(_: type QNetworkSessionSessionErrorEnum): untyped = 2
template OperationNotSupportedError*(_: type QNetworkSessionSessionErrorEnum): untyped = 3
template InvalidConfigurationError*(_: type QNetworkSessionSessionErrorEnum): untyped = 4


type QNetworkSessionUsagePolicyEnum* = distinct cint
template NoPolicy*(_: type QNetworkSessionUsagePolicyEnum): untyped = 0
template NoBackgroundTrafficPolicy*(_: type QNetworkSessionUsagePolicyEnum): untyped = 1


import ./gen_qnetworksession_types
export gen_qnetworksession_types

import
  ../QtCore/gen_qcoreevent_types,
  ../QtCore/gen_qmetaobject_types,
  ../QtCore/gen_qobject,
  ../QtCore/gen_qobjectdefs_types,
  ../QtCore/gen_qvariant_types,
  ./gen_qnetworkconfiguration_types,
  ./gen_qnetworkinterface_types
export
  gen_qcoreevent_types,
  gen_qmetaobject_types,
  gen_qobject,
  gen_qobjectdefs_types,
  gen_qvariant_types,
  gen_qnetworkconfiguration_types,
  gen_qnetworkinterface_types

type cQNetworkSession*{.exportc: "QNetworkSession", incompleteStruct.} = object

proc fcQNetworkSession_new(connConfig: pointer): ptr cQNetworkSession {.importc: "QNetworkSession_new".}
proc fcQNetworkSession_new2(connConfig: pointer, parent: pointer): ptr cQNetworkSession {.importc: "QNetworkSession_new2".}
proc fcQNetworkSession_metaObject(self: pointer, ): pointer {.importc: "QNetworkSession_metaObject".}
proc fcQNetworkSession_metacast(self: pointer, param1: cstring): pointer {.importc: "QNetworkSession_metacast".}
proc fcQNetworkSession_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QNetworkSession_metacall".}
proc fcQNetworkSession_tr(s: cstring): struct_miqt_string {.importc: "QNetworkSession_tr".}
proc fcQNetworkSession_trUtf8(s: cstring): struct_miqt_string {.importc: "QNetworkSession_trUtf8".}
proc fcQNetworkSession_isOpen(self: pointer, ): bool {.importc: "QNetworkSession_isOpen".}
proc fcQNetworkSession_configuration(self: pointer, ): pointer {.importc: "QNetworkSession_configuration".}
proc fcQNetworkSession_interfaceX(self: pointer, ): pointer {.importc: "QNetworkSession_interface".}
proc fcQNetworkSession_state(self: pointer, ): cint {.importc: "QNetworkSession_state".}
proc fcQNetworkSession_error(self: pointer, ): cint {.importc: "QNetworkSession_error".}
proc fcQNetworkSession_errorString(self: pointer, ): struct_miqt_string {.importc: "QNetworkSession_errorString".}
proc fcQNetworkSession_sessionProperty(self: pointer, key: struct_miqt_string): pointer {.importc: "QNetworkSession_sessionProperty".}
proc fcQNetworkSession_setSessionProperty(self: pointer, key: struct_miqt_string, value: pointer): void {.importc: "QNetworkSession_setSessionProperty".}
proc fcQNetworkSession_bytesWritten(self: pointer, ): culonglong {.importc: "QNetworkSession_bytesWritten".}
proc fcQNetworkSession_bytesReceived(self: pointer, ): culonglong {.importc: "QNetworkSession_bytesReceived".}
proc fcQNetworkSession_activeTime(self: pointer, ): culonglong {.importc: "QNetworkSession_activeTime".}
proc fcQNetworkSession_usagePolicies(self: pointer, ): cint {.importc: "QNetworkSession_usagePolicies".}
proc fcQNetworkSession_waitForOpened(self: pointer, ): bool {.importc: "QNetworkSession_waitForOpened".}
proc fcQNetworkSession_open(self: pointer, ): void {.importc: "QNetworkSession_open".}
proc fcQNetworkSession_close(self: pointer, ): void {.importc: "QNetworkSession_close".}
proc fcQNetworkSession_stop(self: pointer, ): void {.importc: "QNetworkSession_stop".}
proc fcQNetworkSession_migrate(self: pointer, ): void {.importc: "QNetworkSession_migrate".}
proc fcQNetworkSession_ignore(self: pointer, ): void {.importc: "QNetworkSession_ignore".}
proc fcQNetworkSession_accept(self: pointer, ): void {.importc: "QNetworkSession_accept".}
proc fcQNetworkSession_reject(self: pointer, ): void {.importc: "QNetworkSession_reject".}
proc fcQNetworkSession_stateChanged(self: pointer, param1: cint): void {.importc: "QNetworkSession_stateChanged".}
proc fcQNetworkSession_connect_stateChanged(self: pointer, slot: int) {.importc: "QNetworkSession_connect_stateChanged".}
proc fcQNetworkSession_opened(self: pointer, ): void {.importc: "QNetworkSession_opened".}
proc fcQNetworkSession_connect_opened(self: pointer, slot: int) {.importc: "QNetworkSession_connect_opened".}
proc fcQNetworkSession_closed(self: pointer, ): void {.importc: "QNetworkSession_closed".}
proc fcQNetworkSession_connect_closed(self: pointer, slot: int) {.importc: "QNetworkSession_connect_closed".}
proc fcQNetworkSession_errorWithQNetworkSessionSessionError(self: pointer, param1: cint): void {.importc: "QNetworkSession_errorWithQNetworkSessionSessionError".}
proc fcQNetworkSession_connect_errorWithQNetworkSessionSessionError(self: pointer, slot: int) {.importc: "QNetworkSession_connect_errorWithQNetworkSessionSessionError".}
proc fcQNetworkSession_preferredConfigurationChanged(self: pointer, config: pointer, isSeamless: bool): void {.importc: "QNetworkSession_preferredConfigurationChanged".}
proc fcQNetworkSession_connect_preferredConfigurationChanged(self: pointer, slot: int) {.importc: "QNetworkSession_connect_preferredConfigurationChanged".}
proc fcQNetworkSession_newConfigurationActivated(self: pointer, ): void {.importc: "QNetworkSession_newConfigurationActivated".}
proc fcQNetworkSession_connect_newConfigurationActivated(self: pointer, slot: int) {.importc: "QNetworkSession_connect_newConfigurationActivated".}
proc fcQNetworkSession_usagePoliciesChanged(self: pointer, usagePolicies: cint): void {.importc: "QNetworkSession_usagePoliciesChanged".}
proc fcQNetworkSession_connect_usagePoliciesChanged(self: pointer, slot: int) {.importc: "QNetworkSession_connect_usagePoliciesChanged".}
proc fcQNetworkSession_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QNetworkSession_tr2".}
proc fcQNetworkSession_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QNetworkSession_tr3".}
proc fcQNetworkSession_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QNetworkSession_trUtf82".}
proc fcQNetworkSession_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QNetworkSession_trUtf83".}
proc fcQNetworkSession_waitForOpened1(self: pointer, msecs: cint): bool {.importc: "QNetworkSession_waitForOpened1".}
proc fQNetworkSession_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QNetworkSession_virtualbase_metaObject".}
proc fcQNetworkSession_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QNetworkSession_override_virtual_metaObject".}
proc fQNetworkSession_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QNetworkSession_virtualbase_metacast".}
proc fcQNetworkSession_override_virtual_metacast(self: pointer, slot: int) {.importc: "QNetworkSession_override_virtual_metacast".}
proc fQNetworkSession_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QNetworkSession_virtualbase_metacall".}
proc fcQNetworkSession_override_virtual_metacall(self: pointer, slot: int) {.importc: "QNetworkSession_override_virtual_metacall".}
proc fQNetworkSession_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QNetworkSession_virtualbase_connectNotify".}
proc fcQNetworkSession_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QNetworkSession_override_virtual_connectNotify".}
proc fQNetworkSession_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QNetworkSession_virtualbase_disconnectNotify".}
proc fcQNetworkSession_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QNetworkSession_override_virtual_disconnectNotify".}
proc fQNetworkSession_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QNetworkSession_virtualbase_event".}
proc fcQNetworkSession_override_virtual_event(self: pointer, slot: int) {.importc: "QNetworkSession_override_virtual_event".}
proc fQNetworkSession_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QNetworkSession_virtualbase_eventFilter".}
proc fcQNetworkSession_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QNetworkSession_override_virtual_eventFilter".}
proc fQNetworkSession_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QNetworkSession_virtualbase_timerEvent".}
proc fcQNetworkSession_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QNetworkSession_override_virtual_timerEvent".}
proc fQNetworkSession_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QNetworkSession_virtualbase_childEvent".}
proc fcQNetworkSession_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QNetworkSession_override_virtual_childEvent".}
proc fQNetworkSession_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QNetworkSession_virtualbase_customEvent".}
proc fcQNetworkSession_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QNetworkSession_override_virtual_customEvent".}
proc fcQNetworkSession_staticMetaObject(): pointer {.importc: "QNetworkSession_staticMetaObject".}
proc fcQNetworkSession_delete(self: pointer) {.importc: "QNetworkSession_delete".}


func init*(T: type gen_qnetworksession_types.QNetworkSession, h: ptr cQNetworkSession): gen_qnetworksession_types.QNetworkSession =
  T(h: h)
proc create*(T: type gen_qnetworksession_types.QNetworkSession, connConfig: gen_qnetworkconfiguration_types.QNetworkConfiguration): gen_qnetworksession_types.QNetworkSession =
  gen_qnetworksession_types.QNetworkSession.init(fcQNetworkSession_new(connConfig.h))

proc create*(T: type gen_qnetworksession_types.QNetworkSession, connConfig: gen_qnetworkconfiguration_types.QNetworkConfiguration, parent: gen_qobject_types.QObject): gen_qnetworksession_types.QNetworkSession =
  gen_qnetworksession_types.QNetworkSession.init(fcQNetworkSession_new2(connConfig.h, parent.h))

proc metaObject*(self: gen_qnetworksession_types.QNetworkSession, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQNetworkSession_metaObject(self.h))

proc metacast*(self: gen_qnetworksession_types.QNetworkSession, param1: cstring): pointer =
  fcQNetworkSession_metacast(self.h, param1)
